[gd_scene load_steps=2 format=3 uid="uid://bqnvyj8yy1yjx"]

[ext_resource type="Script" path="res://addons/vector_ai/scripts/settings_dialog.gd" id="1_yjnkr"]

[node name="SettingsDialog" type="Window"]
title = "Vector AI Settings"
size = Vector2i(500, 300)
exclusive = true
script = ExtResource("1_yjnkr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Vector AI Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="APIKeyLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Gemini API Key:"

[node name="APIKeyContainer" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="APIKeyInput" type="LineEdit" parent="VBoxContainer/GridContainer/APIKeyContainer"]
layout_mode = 2
size_flags_horizontal = 3
secret = true
placeholder_text = "Enter your Gemini API key (for development only)"

[node name="ModelLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Model:"

[node name="ModelOption" type="OptionButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemperatureLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Temperature:"

[node name="TemperatureSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.7

[node name="MaxTokensLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Max Output Tokens:"

[node name="MaxTokensInput" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 8192.0
value = 2048.0
rounded = true

[node name="DevModeCheck" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Developer Mode (Use direct API access)"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"
